:ok_hand: recycle: Refactor code / improve syntax
