# src/routes/institutionsRoute.js
@@ -2,10 +2,10 @@ const controller = require("../controller/institutionsController");
 const express = require("express");
 const router = express.Router();
 
-router.get("/institutions", controller.getAllInstitutions);
-router.get("/institutions/:id", controller.getInstitutionById);
+router.get("/institution", controller.getAllInstitutions);
 router.post("/institutions", controller.createNewInstitution);
-router.patch("/institution/:id", controller.updateInstitutionById);
-router.delete("/institution/:id", controller.deleteInstitutionById);
+router.get("/institutions/:id", controller.getInstitutionById);
+router.patch("/institution/update/:id", controller.updateInstitutionById);
+router.delete("/settings/:id", controller.deleteInstitutionById);
 
 module.exports = router;
