# src/routes/usersRoute.js
@@ -2,9 +2,9 @@ const controller = require("../controller/usersController");
 const express = require("express");
 const router = express.Router();
 
-router.post("/user", controller.createUser);
+router.post("/user/", controller.createUser);
 router.get("/users/", controller.allUsers);
-router.post("/user/:id", controller.login);
-router.delete("/user/:id", controller.deleteUser);
+router.post("/user/login/:id", controller.login);
+router.delete("/user/config/:id", controller.deleteUser);
 
 module.exports = router;
