# swagger/swagger_output.json
@@ -11,7 +11,7 @@
     "http"
   ],
   "paths": {
-    "/institutions": {
+    "/institution": {
       "get": {
         "description": "",
         "parameters": [],
@@ -29,7 +29,9 @@
             "description": "Internal Server Error"
           }
         }
-      },
+      }
+    },
+    "/institutions": {
       "post": {
         "description": "",
         "parameters": [
@@ -101,7 +103,7 @@
         }
       }
     },
-    "/institution/{id}": {
+    "/institution/update/{id}": {
       "patch": {
         "description": "",
         "parameters": [
@@ -147,7 +149,9 @@
             "description": "Internal Server Error"
           }
         }
-      },
+      }
+    },
+    "/settings/{id}": {
       "delete": {
         "description": "",
         "parameters": [
@@ -174,7 +178,79 @@
         }
       }
     },
-    "/users/courses": {
+    "/courses": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/courses/coursetitle": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "courseTitle",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/courses/affirmativepolicies": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "affirmativePolicies",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/courses/available": {
       "get": {
         "description": "",
         "parameters": [],
@@ -187,6 +263,95 @@
           },
           "403": {
             "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/courses/unavailable": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/courses/category": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "category",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/courses/categoryandaffirmativepolicies": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "category",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "affirativePolicies",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -224,167 +389,6 @@
         }
       }
     },
-    "/users/courses/coursetitle": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "courseTitle",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/users/courses/affirmativepolicies": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "affirativePolicies",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/users/courses/available": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/users/courses/unavailable": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/users/courses/category": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "category",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/users/courses/categoryandaffirativepolicies": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "category",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "affirativePolicies",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/institution/course": {
       "post": {
         "description": "",
@@ -398,7 +402,7 @@
                 "courseTitle": {
                   "example": "any"
                 },
-                "affirativePolicies": {
+                "affirmativePolicies": {
                   "example": "any"
                 },
                 "available": {
@@ -414,6 +418,9 @@
                   "example": "any"
                 },
                 "description": {
+                  "example": "any"
+                },
+                "institutionID": {
                   "example": "any"
                 }
               }
@@ -442,7 +449,7 @@
         }
       }
     },
-    "/institution/course/{id}": {
+    "/institution/courses/{id}": {
       "patch": {
         "description": "",
         "parameters": [
@@ -458,13 +465,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "institutionId": {
-                  "example": "any"
-                },
                 "courseTitle": {
                   "example": "any"
                 },
-                "affirativePolicies": {
+                "affirmativePolicies": {
                   "example": "any"
                 },
                 "available": {
@@ -480,6 +484,9 @@
                   "example": "any"
                 },
                 "description": {
+                  "example": "any"
+                },
+                "institutionId": {
                   "example": "any"
                 }
               }
@@ -503,7 +510,9 @@
             "description": "Internal Server Error"
           }
         }
-      },
+      }
+    },
+    "/institution/course/{id}": {
       "delete": {
         "description": "",
         "parameters": [
@@ -533,7 +542,7 @@
         }
       }
     },
-    "/user": {
+    "/user/": {
       "post": {
         "description": "",
         "parameters": [
@@ -574,7 +583,7 @@
         }
       }
     },
-    "/user/{id}": {
+    "/user/login/{id}": {
       "post": {
         "description": "",
         "parameters": [
@@ -614,7 +623,9 @@
             "description": "Internal Server Error"
           }
         }
-      },
+      }
+    },
+    "/user/config/{id}": {
       "delete": {
         "description": "",
         "parameters": [
@@ -631,6 +642,17 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
